# nano_example

./: .gitignore  CMakelists.txt  README.md
include/: sub.hpp
nanoDBRAIN/: CMakeLists.txt  README.md  pyproject.toml
nanoDBRAIN/src/: nanoDBRAIN_ext.cpp
nanoDBRAIN/src/nanoDBRAIN/: __init__.py
src/: main.cpp  sub.cpp
tests/: test_basic.py  test_hoge.ipynb
